happy-bubbles-presence/happy-bubbles-presence.daemonset.yaml
---
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  namespace: default
  name: happy-bubbles-presence
  labels:
    app: happy-bubbles-presence
spec:
  template:
    metadata:
      labels:
        app: happy-bubbles-presence
    spec:
      hostNetwork: true
      containers:
      - name: happy-bubbles-presence
        image: johncardenas/happybubbles-presence
        imagePullPolicy: Always
        ports:
        - containerPort: 5555
          name: web
        volumeMounts:
        # Make sure to create the presence.db file before mounting file
        - mountPath: /go/src/app/presence.db
          name: config
          subPath: presence.db
        - name: localtime
          mountPath: /etc/localtime
      volumes:
      - name: config
        nfs:
          server: 192.168.1.128
          path: /volume1/configs/homeassistant/happy-bubbles-presence
      - name: localtime
        hostPath:
          path: /etc/localtime
