happy-bubbles-presence/happy-bubbles-presence.svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: happy-bubbles-presence
  labels:
    app: happy-bubbles-presence
spec:
  selector:
    app: happy-bubbles-presence
  ports:
    - name: happy-bubbles-presence
      port: 5555
      targetPort: 5555
