happy-bubbles-presence/happy-bubbles-presence.ingress.traefik.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: default
  name: happy-bubbles-presence
  labels:
    app: happy-bubbles-presence
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - host: presence.will.lan
      http:
        paths:
          - backend:
              serviceName: happy-bubbles-presence
              servicePort: 5555
